kubernetes_training/istio/sampleapp-canary/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp-deployment-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      labels:
        app: sampleapp
        version: v2
    spec:
      containers:
      - name: sampleapp
        image: dockeritc778/sampleapp:20260625.12
        ports:
        - containerPort: 5000
