kubernetes_training/istio/sampleapp-canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp-svc
spec:
  type: ClusterIP
  selector:
    app: sampleapp
  ports:
    - port: 80      
      targetPort: 5000
