kubernetes_training/istio/sampleapp-canary/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: sampleapp-destinationrule
spec:
  host: sampleapp-svc
  subsets:
  
  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2
